# miniDB

./: .gitignore  README.md  new.db
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  internalNode.cpp  leafNode.cpp
src/backend/include/: Row.h  internalNode.h  leafNode.h
src/frontend/: CMakeLists.txt  Cursor.cpp  SQL_VM.cpp  table.cpp
src/frontend/include/: Cursor.h  SQL.h  table.h
src/tests/: single_line_harness.cpp  test.cpp  test_harness.cpp
src/tests/include/: test_harness.h
src/utils/: CMakeLists.txt  InputBuffer.cpp
src/utils/include/: InputBuffer.h
